--- a/src/Components/MachineWrapper.css
+++ b/src/Components/MachineWrapper.css
@@ -107,7 +107,7 @@ input:checked+.slider:before {
 
 .Vslider {
   -webkit-appearance: none;
-  height: 20px;
+  height: 22px;
   width: 80%;
   background: black;
   outline: none;
@@ -124,7 +124,7 @@ input:checked+.slider:before {
   -webkit-appearance: none;
   appearance: none;
   width: 8px;
-  height: 25px;
+  height: 30px;
   background: rgb(109, 3, 180);
   cursor: pointer;
 }
@@ -144,4 +144,39 @@ input:checked+.slider:before {
   margin: 0;
   padding: 0;
   font-size: 20px;
+}
+
+@media only screen and (max-width: 1100px) {
+  #drum-machine {
+    /* width: 80%; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+  }
+
+  #drums {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #display {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #drum-machine {
+    width: 90%;
+  }
+
+  .drum-pad {
+    width: 25%;
+    height: 75px;
+  }
+
 }
